Coverity analysis defect 105086: Uninitialized scalar field

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • Sharding 2018-11-05
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      A scalar field is not initialized by the constructor

      Defect 105086 (STATIC_C)
      Checker UNINIT_CTOR (subcategory none)
      File: /src/mongo/s/client/shard_connection.cpp
      Function mongo::ShardConnection::ShardConnection(mongo::OperationContext *, const mongo::ConnectionString &, const std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char>> &, std::shared_ptr<mongo::ChunkManager>)
      /src/mongo/s/client/shard_connection.h, line: 147
      Class member declaration for "_setVersion".

              bool _setVersion;
      

      /src/mongo/s/client/shard_connection.cpp, line: 402
      Non-static class member "_setVersion" is not initialized in this constructor nor in any functions that it calls.

          }
      

            Assignee:
            Kaloian Manassiev
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: