SERVER-37667 Silence Coverity warning in ShardConnection